--- a/BaseArchitecture/wwwroot/youyangpin/src/views/freight/app/freight.html
+++ b/BaseArchitecture/wwwroot/youyangpin/src/views/freight/app/freight.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>个人信息</title>
+    <title>运费申请</title>
   </head>
   <body>
     <div id="app">
