--- a/BaseArchitecture/wwwroot/youyangpin/src/views/order/app/order.html
+++ b/BaseArchitecture/wwwroot/youyangpin/src/views/order/app/order.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>个人信息</title>
+    <title>我的订单</title>
   </head>
   <body>
     <div id="app">
